--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/ACM_icon.svg"
+      href="./src/assets/ACM/ACM_small.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Association of Computer Machinary</title>
